<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.MainActivity">

    <ImageView
        android:id="@+id/m_iv_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/im_photo" />

    <EditText
        android:id="@+id/m_et_self_intro"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/sp_rect8_gray50"
        android:gravity="start|top"
        android:hint="@string/am_et_self_intro"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:maxLength="200"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_sc_show_bg" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/m_sc_show_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/am_tv_show_bg"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_tv_full_name" />


    <Button
        android:id="@+id/m_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/shared_btn_submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/m_btn_weather"
        app:layout_constraintEnd_toEndOf="@+id/m_btn_invest"
        app:layout_constraintStart_toStartOf="@+id/m_btn_invest" />

    <TextView
        android:id="@+id/m_tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/am_tv_full_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_iv_avatar" />

    <ImageView
        android:id="@+id/m_iv_avatar"
        android:layout_width="@dimen/m_iv_avatar"
        android:layout_height="@dimen/m_iv_avatar"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/im_photo_avatar" />

    <TextView
        android:id="@+id/m_tv_self_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/am_tv_self_intro"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m_et_self_intro" />

    <Button
        android:id="@+id/m_btn_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_weather"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/m_btn_other_fact"
        app:layout_constraintEnd_toStartOf="@+id/m_btn_fact"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/m_btn_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_fact"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/m_btn_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_btn_weather"
        app:layout_constraintTop_toTopOf="@+id/m_btn_weather" />

    <Button
        android:id="@+id/m_btn_invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_investment"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/m_btn_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_resume"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/m_btn_other_fact"
        app:layout_constraintEnd_toStartOf="@id/m_btn_other_fact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m_btn_other_fact" />

    <Button
        android:id="@+id/m_btn_other_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_other_fact"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/m_btn_invest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_btn_resume" />

    <Button
        android:id="@+id/m_btn_more_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/am_btn_more_feature"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/m_btn_invest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_btn_invest"
        app:layout_constraintTop_toTopOf="@+id/m_btn_invest" />

</androidx.constraintlayout.widget.ConstraintLayout>