<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ii_cl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ii_tv_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="SYMBOL" />

            <TextView
                android:id="@+id/ii_tv_open_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ii_tv_open"
                app:layout_constraintStart_toStartOf="@+id/ii_tv_symbol"
                app:layout_constraintTop_toBottomOf="@+id/ii_tv_symbol" />

            <TextView
                android:id="@+id/ii_tv_high_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ii_tv_high"
                app:layout_constraintStart_toStartOf="@+id/ii_tv_open_label"
                app:layout_constraintTop_toBottomOf="@+id/ii_tv_open_label" />

            <TextView
                android:id="@+id/ii_tv_low_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ii_tv_low"
                app:layout_constraintStart_toStartOf="@+id/ii_tv_high_label"
                app:layout_constraintTop_toBottomOf="@+id/ii_tv_high_label" />

            <TextView
                android:id="@+id/ii_tv_close_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ii_tv_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ii_tv_low_label"
                app:layout_constraintTop_toBottomOf="@+id/ii_tv_low_label" />

            <TextView
                android:id="@+id/ii_tv_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/ii_tv_open_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ii_tv_open_label"
                app:layout_constraintTop_toTopOf="@+id/ii_tv_open_label" />

            <TextView
                android:id="@+id/ii_tv_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/ii_tv_high_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ii_tv_high_label"
                app:layout_constraintTop_toTopOf="@+id/ii_tv_high_label" />

            <TextView
                android:id="@+id/ii_tv_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/ii_tv_low_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ii_tv_low_label"
                app:layout_constraintTop_toTopOf="@+id/ii_tv_low_label" />

            <TextView
                android:id="@+id/ii_tv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/ii_tv_close_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ii_tv_close_label"
                app:layout_constraintTop_toTopOf="@+id/ii_tv_close_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/ii_pb_loading"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:visibility="invisible" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>